tests/negative/Internal/Positivity/EvilWithAxiom.juvix
module EvilWithAxiom;

axiom g : Type -> Type;

type Evil (f : Type -> Type) :=
  magic : g (Evil f) -> Evil f;
